# stageweaver

./: .env.example  .env.template  .gitignore  BUNDLE_INFO.txt  README.md  SERVER_SETUP.md  crawl_extract工具说明.txt  environment-linux-a800.yml  environment-linux.yml  pyproject.toml  requirements-linux-a800-cu126.txt  requirements-linux-cu121.txt  requirements-linux-cu128.txt  requirements.txt  搜索功能说明.txt
client/: agent_local_server.py  stageweaver_runner.py
data/deepresearcher_protocol/: ood_test.jsonl  protocol_split_stats.json  seen_dev.jsonl  seen_train.jsonl
docs/: ARCHIVED_RESULTS_SUMMARY.md  CLEANUP_MANIFEST.md  CURRENT_PROTOCOL.md
infra/searxng/: docker-compose.yml  settings.yml
memory/: build_stageweaver_bank.py  memento_text_memory.py  semantic_retriever.py  stageweaver_composer.py  stageweaver_dataset.py  stageweaver_losses.py  stageweaver_projector.py  stageweaver_schema.py  stageweaver_serializers.py  train_stageweaver_composer_sft.py
scripts/: analyze_trace_memory.py  audit_executor_memory_bank.py  build_stageweaver_bank.sh  collect_seen_dev_traces.sh  collect_seen_train_traces.sh  eval_ood_test.sh  eval_seen_dev_gate.sh  filter_executor_memory_bank.py  linux_preflight.sh  qwen3_next_openai_server.py  run_stageweaver_eval.py  train_append_sft.sh
server/: ai_crawl.py  code_agent.py  documents_tool.py  image_tool.py  math_tool.py  search_tool.py
tests/: test_current_protocol.py  test_executor_dynamic_memory_regressions.py  test_executor_memory_bank.py  test_executor_memory_bank_filter.py  test_executor_state_builder.py  test_executor_trajectory_serializer.py  test_latentmem_architecture.py  test_math_tool.py
(+4 files in other folders)
