[project]
name = "memento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.71.0",
    "assemblyai==0.40.2",
    "chunkr-ai>=0.3.7",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "crawl4ai>=0.7.4",
    "docling>=2.67.0",
    "docx2markdown==0.1.1",
    "fastmcp==2.7.0",
    "ffmpeg-python>=0.2.0",
    "loguru==0.7.3",
    "openai>=2.0.0",
    "opencv-python-headless==4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas==2.2.3",
    "modelscope>=1.24.0",
    "pymupdf4llm>=0.0.28",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-pptx==1.0.2",
    "retry==0.9.2",
    "scenedetect==0.6.6",
    "sentence-transformers>=3.0.0",
    "tabulate>=0.9.0",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "vllm==0.6.6",
    "xmltodict==0.14.2",
    "xls2xlsx>=0.2.0",
    "yt-dlp>=2025.8.27",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "torchaudio==2.5.1+cu121",
]

[project.scripts]
stageweaver_runner = "client.stageweaver_runner:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["client*", "memory*", "server*"]
exclude = ["analysis*", "data*", "docs*", "scripts*", "tests*"]
namespaces = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
